--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   
   <style>
-    /* Default Theme Variables (Dark Mode) */
+    /* Default (Dark Mode) Variables */
     :root {
       --bg-color: #121212;
       --text-color: #fff;
       --accent-color: #ffcc00;
-      --box-bg: #1e1e1e;
-      --box-bg-hover: #2a2a2a;
+      --box-bg: #121212; /* Now matches the overall background */
+      --box-bg-hover: #121212;
       --box-shadow: none;
     }
     /* Light Mode Variables */
@@ -22,11 +22,11 @@
       --bg-color: #f0f0f0;
       --text-color: #333;
       --accent-color: #ffcc00;
-      --box-bg: #fff;
-      --box-bg-hover: #f9f9f9;
-      --box-shadow: 0 0 25px rgba(255,255,255,0.2);
+      --box-bg: #f0f0f0;
+      --box-bg-hover: #f0f0f0;
+      --box-shadow: none;
     }
-    /* Force options button text to be white in dark mode */
+    /* Force the options button text to be white in dark mode */
     html:not(.light) .options-btn {
       color: #fff;
     }
@@ -56,7 +56,7 @@
       width: 100%;
       padding: 20px 80px;
       background: var(--box-bg);
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      box-shadow: none;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -96,7 +96,7 @@
       background: var(--box-bg);
       padding: 30px;
       border-radius: 20px;
-      box-shadow: var(--box-shadow);
+      box-shadow: none;
       width: 450px;
       min-height: 450px;
       display: flex;
@@ -214,7 +214,7 @@
       text-align: center;
       color: var(--text-color);
       position: relative;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      box-shadow: none;
       animation: popIn 0.3s ease-out;
     }
     @keyframes popIn {
@@ -388,6 +388,9 @@
         <button type="button" class="theme-option-btn" style="background: #1B2B34; color: #C0C5CE;" onclick="applyPreMadeTheme('ocean')">Ocean</button>
         <button type="button" class="theme-option-btn" style="background: #2C3E50; color: #ECF0F1;" onclick="applyPreMadeTheme('forest')">Forest</button>
         <button type="button" class="theme-option-btn" style="background: #2D2D2D; color: #F2F2F2;" onclick="applyPreMadeTheme('sunset')">Sunset</button>
+        <button type="button" class="theme-option-btn" style="background: #000000; color: #E0E0E0;" onclick="applyPreMadeTheme('midnight')">Midnight</button>
+        <button type="button" class="theme-option-btn" style="background: #ffe4e1; color: #800000;" onclick="applyPreMadeTheme('rose')">Rose</button>
+        <button type="button" class="theme-option-btn" style="background: #ffefd5; color: #ff1493;" onclick="applyPreMadeTheme('candy')">Candy</button>
       </div>
       <br />
       <button type="button" class="add-class-btn" onclick="closeCustomThemeModal(event)">Close</button>
@@ -416,20 +419,22 @@
     let currentAssignmentIndex = null;
     let confirmCallback = null;
 
-    // Pre-made themes with their CSS variable values.
+    // Pre-made themes with updated values: box backgrounds now match the overall background.
     const preMadeThemes = {
-      default: { bgColor: "#121212", textColor: "#fff", accentColor: "#ffcc00", boxBg: "#1e1e1e", boxBgHover: "#2a2a2a" },
-      light:   { bgColor: "#f0f0f0", textColor: "#333", accentColor: "#ffcc00", boxBg: "#fff",   boxBgHover: "#f9f9f9" },
-      ocean:   { bgColor: "#1B2B34", textColor: "#C0C5CE", accentColor: "#6699CC", boxBg: "#343D46", boxBgHover: "#4F5B66" },
-      forest:  { bgColor: "#2C3E50", textColor: "#ECF0F1", accentColor: "#27AE60", boxBg: "#34495E", boxBgHover: "#3E5367" },
-      sunset:  { bgColor: "#2D2D2D", textColor: "#F2F2F2", accentColor: "#FF5733", boxBg: "#3A3A3A", boxBgHover: "#4A4A4A" }
+      default: { bgColor: "#121212", textColor: "#fff", accentColor: "#ffcc00", boxBg: "#121212", boxBgHover: "#121212" },
+      light:   { bgColor: "#f0f0f0", textColor: "#333", accentColor: "#ffcc00", boxBg: "#f0f0f0", boxBgHover: "#f0f0f0" },
+      ocean:   { bgColor: "#1B2B34", textColor: "#C0C5CE", accentColor: "#6699CC", boxBg: "#1B2B34", boxBgHover: "#1B2B34" },
+      forest:  { bgColor: "#2C3E50", textColor: "#ECF0F1", accentColor: "#27AE60", boxBg: "#2C3E50", boxBgHover: "#2C3E50" },
+      sunset:  { bgColor: "#2D2D2D", textColor: "#F2F2F2", accentColor: "#FF5733", boxBg: "#2D2D2D", boxBgHover: "#2D2D2D" },
+      midnight:{ bgColor: "#000000", textColor: "#E0E0E0", accentColor: "#00FFFF", boxBg: "#000000", boxBgHover: "#000000" },
+      rose:    { bgColor: "#ffe4e1", textColor: "#800000", accentColor: "#ff69b4", boxBg: "#ffe4e1", boxBgHover: "#ffe4e1" },
+      candy:   { bgColor: "#ffefd5", textColor: "#ff1493", accentColor: "#ff69b4", boxBg: "#ffefd5", boxBgHover: "#ffefd5" }
     };
 
     // Save classesData to localStorage.
     function saveData() {
       localStorage.setItem("classesData", JSON.stringify(classesData));
     }
-
     // Load classesData from localStorage.
     function loadData() {
       const storedData = localStorage.getItem("classesData");
@@ -437,7 +442,6 @@
         classesData = JSON.parse(storedData);
       }
     }
-
     function saveTheme(theme) {
       localStorage.setItem("theme", theme);
     }
@@ -449,8 +453,7 @@
         document.documentElement.classList.remove("light");
       }
     }
-
-    // Load custom theme from localStorage if available.
+    // Load custom theme if saved.
     function loadCustomTheme() {
       const savedCustom = localStorage.getItem("customTheme");
       if (savedCustom) {
@@ -460,8 +463,7 @@
         }
       }
     }
-
-    // Apply a pre-made theme by setting CSS variables.
+    // Apply a pre-made theme by updating CSS variables.
     function applyPreMadeTheme(themeKey) {
       const theme = preMadeThemes[themeKey];
       if (theme) {
@@ -473,23 +475,20 @@
         localStorage.setItem("customTheme", JSON.stringify({themeKey: themeKey}));
       }
     }
-
-    // Helper to format dates.
+    // Format a date string.
     function formatDate(dateString) {
       const [year, month, day] = dateString.split('-');
       const localDate = new Date(year, month - 1, day);
       const options = { weekday: 'short', month: 'numeric', day: 'numeric' };
       return localDate.toLocaleDateString('en-US', options);
     }
-
-    // Helper to check if a date is overdue.
+    // Check if due date is overdue.
     function isOverdue(dueDateValue) {
       if (!dueDateValue) return false;
       let dueDate = new Date(dueDateValue);
       dueDate.setHours(23, 59, 59, 999);
       return dueDate < new Date();
     }
-
     // Render classes and assignments.
     function renderClasses() {
       const container = document.getElementById('class-container');
@@ -497,7 +496,6 @@
       classesData.forEach((cls, classIndex) => {
         const box = document.createElement('div');
         box.classList.add('box');
-
         // Header
         const headerDiv = document.createElement('div');
         headerDiv.classList.add('box-header');
@@ -529,8 +527,7 @@
         headerDiv.appendChild(headerTop);
         headerDiv.appendChild(progress);
         box.appendChild(headerDiv);
-
-        // List assignments
+        // List assignments.
         const ul = document.createElement('ul');
         cls.assignments.forEach((assignment, assignmentIndex) => {
           const li = document.createElement('li');
@@ -578,8 +575,7 @@
           ul.appendChild(li);
         });
         box.appendChild(ul);
-
-        // Footer with buttons
+        // Footer with buttons.
         const footerDiv = document.createElement('div');
         footerDiv.classList.add('box-footer');
         const addAssignmentBtn = document.createElement('button');
@@ -609,18 +605,15 @@
         footerDiv.appendChild(addAssignmentBtn);
         footerDiv.appendChild(sortBtn);
         box.appendChild(footerDiv);
-
         container.appendChild(box);
       });
     }
-
     function toggleTheme(e) {
       if (e) e.preventDefault();
       document.documentElement.classList.toggle("light");
       const theme = document.documentElement.classList.contains("light") ? "light" : "dark";
       saveTheme(theme);
     }
-
     function openClassModal(e) {
       if (e) e.preventDefault();
       document.getElementById("classModal").style.display = "flex";
@@ -646,7 +639,6 @@
         classNameInput.value = "";
       }
     }
-
     function closeAssignmentModal(e) {
       if (e) e.preventDefault();
       document.getElementById("assignmentModal").style.display = "none";
@@ -673,7 +665,6 @@
         closeAssignmentModal();
       }
     }
-
     function openAssignmentOptionsModal(classIndex, assignmentIndex) {
       currentClassIndex = classIndex;
       currentAssignmentIndex = assignmentIndex;
@@ -709,7 +700,6 @@
         closeEditAssignmentModal();
       }
     }
-
     function confirmDeleteAssignment() {
       closeAssignmentOptionsModal(null);
       openConfirmModal("Are you sure you want to delete this assignment?", function() {
@@ -734,7 +724,6 @@
       }
       closeConfirmModal(null);
     }
-
     // Custom Theme Modal Controls
     function openCustomThemeModal(e) {
       if (e) e.preventDefault();
@@ -744,7 +733,6 @@
       if (e) e.preventDefault();
       document.getElementById("customThemeModal").style.display = "none";
     }
-
     // Load saved data, theme, and custom theme on startup, then render classes.
     loadData();
     loadTheme();
