--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
       --bg-color: #121212;
       --text-color: #fff;
       --accent-color: #ffcc00;
-      --box-bg: #121212; /* Matches the overall background */
-      --box-bg-hover: #121212;
+      --box-bg: #1e1e1e;
+      --box-bg-hover: #2a2b2e;
       --box-shadow: none;
     }
-    /* Light Mode Variables */
+    /* Light Mode Variables (if activated by theme presets) */
     html.light {
       --bg-color: #f0f0f0;
       --text-color: #333;
       --accent-color: #ffcc00;
-      --box-bg: #f0f0f0;
-      --box-bg-hover: #f0f0f0;
+      --box-bg: #fff;
+      --box-bg-hover: #f9f9f9;
       --box-shadow: none;
     }
-    /* Force the options button text to be white in dark mode */
+    /* Force options button text to be white in dark mode */
     html:not(.light) .options-btn {
       color: #fff;
     }
@@ -96,7 +96,8 @@
       background: var(--box-bg);
       padding: 30px;
       border-radius: 20px;
-      box-shadow: none;
+      /* Box shadow removed */
+      box-shadow: var(--box-shadow);
       width: 450px;
       min-height: 450px;
       display: flex;
@@ -418,16 +419,64 @@
     let currentAssignmentIndex = null;
     let confirmCallback = null;
 
-    // Pre-made themes with updated values.
+    // Pre-made themes with distinct box backgrounds.
     const preMadeThemes = {
-      default: { bgColor: "#121212", textColor: "#fff", accentColor: "#ffcc00", boxBg: "#121212", boxBgHover: "#121212" },
-      light:   { bgColor: "#f0f0f0", textColor: "#333", accentColor: "#ffcc00", boxBg: "#f0f0f0", boxBgHover: "#f0f0f0" },
-      ocean:   { bgColor: "#1B2B34", textColor: "#C0C5CE", accentColor: "#6699CC", boxBg: "#1B2B34", boxBgHover: "#1B2B34" },
-      forest:  { bgColor: "#2C3E50", textColor: "#ECF0F1", accentColor: "#27AE60", boxBg: "#2C3E50", boxBgHover: "#2C3E50" },
-      sunset:  { bgColor: "#2D2D2D", textColor: "#F2F2F2", accentColor: "#FF5733", boxBg: "#2D2D2D", boxBgHover: "#2D2D2D" },
-      midnight:{ bgColor: "#000000", textColor: "#E0E0E0", accentColor: "#00FFFF", boxBg: "#000000", boxBgHover: "#000000" },
-      rose:    { bgColor: "#ffe4e1", textColor: "#800000", accentColor: "#ff69b4", boxBg: "#ffe4e1", boxBgHover: "#ffe4e1" },
-      candy:   { bgColor: "#ffefd5", textColor: "#ff1493", accentColor: "#ff69b4", boxBg: "#ffefd5", boxBgHover: "#ffefd5" }
+      default: { 
+        bgColor: "#121212", 
+        textColor: "#fff", 
+        accentColor: "#ffcc00", 
+        boxBg: "#1e1e1e", 
+        boxBgHover: "#2a2a2a" 
+      },
+      light: { 
+        bgColor: "#f0f0f0", 
+        textColor: "#333", 
+        accentColor: "#ffcc00", 
+        boxBg: "#fff", 
+        boxBgHover: "#f9f9f9" 
+      },
+      ocean: { 
+        bgColor: "#1B2B34", 
+        textColor: "#C0C5CE", 
+        accentColor: "#6699CC", 
+        boxBg: "#2C3E50", 
+        boxBgHover: "#3E5367" 
+      },
+      forest: { 
+        bgColor: "#2C3E50", 
+        textColor: "#ECF0F1", 
+        accentColor: "#27AE60", 
+        boxBg: "#34495E", 
+        boxBgHover: "#3E5367" 
+      },
+      sunset: { 
+        bgColor: "#2D2D2D", 
+        textColor: "#F2F2F2", 
+        accentColor: "#FF5733", 
+        boxBg: "#3A3A3A", 
+        boxBgHover: "#4A4A4A" 
+      },
+      midnight: { 
+        bgColor: "#000000", 
+        textColor: "#E0E0E0", 
+        accentColor: "#00FFFF", 
+        boxBg: "#111111", 
+        boxBgHover: "#222222" 
+      },
+      rose: { 
+        bgColor: "#ffe4e1", 
+        textColor: "#800000", 
+        accentColor: "#ff69b4", 
+        boxBg: "#fff0f0", 
+        boxBgHover: "#fff5f5" 
+      },
+      candy: { 
+        bgColor: "#ffefd5", 
+        textColor: "#ff1493", 
+        accentColor: "#ff69b4", 
+        boxBg: "#fff8e7", 
+        boxBgHover: "#fffbf0" 
+      }
     };
 
     // Save classesData to localStorage.
